# Frontier

./: .gitignore  COPYRIGHT  FRONTIER.readme  README.md
FrontierPhoenix/src/: CMakeLists.txt  main.cpp
FrontierPhoenix/src/cluster/: Cluster.h  README.md
FrontierPhoenix/src/cluster/commands/: Condensation.cpp  Condensation.h
FrontierPhoenix/src/drplan/: DRPlan.h  DRPlanner.h  README.md
FrontierPhoenix/src/drplan/plans/: CanonicalTopDown.h  Default.h
FrontierPhoenix/src/drplan/plans/canonical_top_down/: PebbleGame2D.h  PebbleGameGraph.h
FrontierPhoenix/src/drplan/plans/pebble_game/: PebbleGame2D.h
FrontierPhoenix/src/entities/: Constraint.h  Graph.h  MappedGraph.cpp  MappedGraph.h  Shape.cpp  Shape.h  Sketch.cpp  Sketch.h  SketchHypergraph.h  SketchMapper.h
FrontierPhoenix/src/ffnx/cluster/: Cluster.h
FrontierPhoenix/src/ffnx/cluster/commands/: Condensation.cpp  Condensation.h
FrontierPhoenix/src/ffnx/drplan/: DRPlan.h  DRPlanner.h  README.md
FrontierPhoenix/src/ffnx/drplan/plans/: MFA.h
FrontierPhoenix/src/ffnx/drplan/plans/canonical_top_down/: CanonicalTopDown.h  ComponentDetector.h  PebbleGame2D.h  (+2 more)
FrontierPhoenix/src/ffnx/event/: observer.h
FrontierPhoenix/src/ffnx/graph/: Command.h  Graph.h  Interface.h
FrontierPhoenix/src/ffnx/graph/commands/: AddEdge.h  AddVertex.h  RemoveEdge.h  RemoveVertex.h
FrontierPhoenix/src/ffnx/hypergraph/: Annotator.cpp  Annotator.h  EventDispatching.h  HyperGraph.h  README.md
FrontierPhoenix/src/ffnx/hypergraph/sparse/: Edge.cpp  Edge.h  Sparse.cpp  Sparse.h
FrontierPhoenix/src/ffnx/mapping/hyper_to_flow/: SketchMapper.cpp  SketchMapper.h
FrontierPhoenix/src/ffnx/max_flow_alg/: CMakeLists.txt  max_flow_alg_test.cpp  mfa1List.h  mfa2Clas.h  mfa6Dist.cpp  mfa6Dist.h  mfa6GetC.h  mfa7DRTree.h
FrontierPhoenix/src/ffnx/sketcher/: Constraint.h  Shape.h  sketcher.cpp  sketcher.h
FrontierPhoenix/src/ffnx_ui/: CMakeLists.txt  ffnx_mainwindow.h  main.cpp
FrontierPhoenix/src/ffnx_ui/graph/: edge.h  graph_command_factory.h  graph_selection_model.h  graph_widget.cpp  graph_widget.h  vertex.h  vertex_positioning_engine.h
FrontierPhoenix/src/ffnx_ui/graph/logic/: command_consolidator.h  controller.h  graph_selection_model.h  ui_command.h  vertex_positioning_engine.h
FrontierPhoenix/src/ffnx_ui/graph/widgets/: frame.h  graphics_scene.h  graphics_view.h
FrontierPhoenix/src/flowgraph/: Command.h  FlowGraph.h  Interface.h  README.md
FrontierPhoenix/src/flowgraph/commands/: AddEdge.h  AddVertex.h
FrontierPhoenix/src/graph/: Command.h  Graph.h  Interface.h
FrontierPhoenix/src/graph/commands/: AddEdge.h  AddVertex.h
FrontierPhoenix/src/hypergraph/: Annotator.h  EventDispatching.cpp  EventDispatching.h  Sparse.cpp  Sparse.h
FrontierPhoenix/src/hypergraph/sparse/: Edge.cpp  Edge.h  Sparse.cpp  Sparse.h
FrontierPhoenix/src/mapping/: MappedGraph.h  SketchMapper.cpp  SketchMapper.h
FrontierPhoenix/src/mapping/hyper_to_flow/: SketchMapper.cpp  SketchMapper.h
FrontierPhoenix/src/pebble_game/: PebbleGame2D.h
FrontierPhoenix/src/sketcher/: Constraint.cpp  README.md  sketcher.cpp  sketcher.h
FrontierPhoenix/src/tree/: TreeNode.h
FrontierPhoenix/tst/: CMakeLists.txt
FrontierPhoenix/tst/cluster/: CMakeLists.txt  ClusterTest.cpp
FrontierPhoenix/tst/drplan/: CMakeLists.txt  DRPlanTest.cpp  PebbleGameTest.cpp  PebbleTrackerTest.cpp
FrontierPhoenix/tst/examples/: CMakeLists.txt
FrontierPhoenix/tst/examples/pebblegame_renderer/: .gitignore  CMakeLists.txt  render_graph.sh  render_pebblegame_steps.cpp
FrontierPhoenix/tst/examples/pebblegame_renderer/sample_graphs/: desargues.dot  format_sample_graph.sh  g_001.dot  g_002.dot  g_003.dot  g_004.dot  generate_grid.py  grid.dot
FrontierPhoenix/tst/flowgraph/: CMakeLists.txt  FlowGraphTest.cpp
FrontierPhoenix/tst/gtest/: CMakeLists.txt
FrontierPhoenix/tst/gtest/cluster/: ClusterTest.cpp
FrontierPhoenix/tst/gtest/drplan/: CMakeLists.txt  ComponentPebbleGameTest.cpp  DRPlanTest.cpp  PebbleGameTest.cpp  PebbleTrackerTest.cpp
FrontierPhoenix/tst/gtest/flowgraph/: FlowGraphTest.cpp  InterfaceTest.cpp
FrontierPhoenix/tst/gtest/graph/: CMakeLists.txt  DirectedGraphTest.cpp  InterfaceTest.cpp
FrontierPhoenix/tst/gtest/hypergraph/: AnnotatorTest.cpp  EventDispatchingTest.cpp  SparseTest.cpp  utils.h
FrontierPhoenix/tst/gtest/mapping/: CMakeLists.txt  HyperToFlowTest.cpp
FrontierPhoenix/tst/gtest/sketcher/: CMakeLists.txt  SketcherTest.cpp
FrontierPhoenix/tst/hypergraph/: AnnotatorTest.cpp  CMakeLists.txt  EventDispatchingTest.cpp  SparseTest.cpp  utils.h
FrontierPhoenix/tst/mapping/: HyperToFlowTest.cpp
FrontierPhoenix/tst/sketcher/: SketcherTest.cpp
(+799 files in other folders)
